--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -15,5 +15,5 @@ spec:
         app: go-server-ci
     spec:
       containers:
-      - image: dockerhubのユーザ名/go-server-ci
+      - image: m20029/go-server-ci
         name: go-server-ci
